# PyOlan

./: README.md  pyproject.toml
src/pyolan/: parser.py  rolls.py
tests/: test_parser.py
