[project]
name = "pyolan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thomas David", email = "thomasdavid0@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pfcschemas>=0.1.10",
    "pydantic>=2.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
